infra/K8s/orders-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: orders-depl
spec:
   replicas: 1
   selector:
      matchLabels:
         app: orders
   template:
      metadata:
         labels:
            app: orders
      spec:
         containers:
            - name: orders
              image: shadman/orders:latest
              imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
   name: orders-clusterip-srv
spec:
   selector:
      app: orders
   ports:
      - name: orders
        protocol: TCP
        port: 4000
        targetPort: 4000
