infra/K8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: ingress-srv
   annotations:
      kubernetes.io/ingress.class: 'nginx'
      nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
   rules:
      - host: spareticketing.com
        http:
           paths:
              - path: /auth
                pathType: Prefix
                backend:
                   service:
                      name: auth-clusterip-srv
                      port:
                         number: 4000
              - path: /auth/signup
                pathType: Prefix
                backend:
                   service:
                      name: auth-clusterip-srv
                      port:
                         number: 4000
              - path: /auth/signin
                pathType: Prefix
                backend:
                   service:
                      name: auth-clusterip-srv
                      port:
                         number: 4000
              - path: /auth/signout
                pathType: Prefix
                backend:
                   service:
                      name: auth-clusterip-srv
                      port:
                         number: 4000
              - path: /auth/currentuser
                pathType: Prefix
                backend:
                   service:
                      name: auth-clusterip-srv
                      port:
                         number: 4000
              - path: /?(.*)
                pathType: Prefix
                backend:
                   service:
                      name: auth-clusterip-srv
                      port:
                         number: 4000
